# switchyard

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  MASTER_SPEC.md  Makefile  README.md  rustfmt.toml
.github/workflows/: ci.yml  pages.yml
codex/: 00-OVERNIGHT-RUNBOOK.md  ENVIRONMENT-NOTES.md  taskboard.yaml
codex/prompts/: 00-LAUNCH-THIS-REPO.md  01-REPO-AND-TOOLING.md  02-CONTRACTS-AND-SCHEMAS.md  03-CORE-DOMAIN.md  04-APIS-OR-PLUGIN-LAYER.md  05-TESTS-AND-VALIDATION.md  06-CI-LINT-AND-RELEASE.md  07-DOCS-FINAL-AUDIT.md
contracts/: asset-bundle.schema.json  behavior-program.schema.json  runtime-snapshot.schema.json
crates/switchyard-cli/: Cargo.toml
crates/switchyard-cli/src/: main.rs
crates/switchyard-cli/tests/: cli.rs
crates/switchyard-core/: Cargo.toml
crates/switchyard-core/examples/: cutscene.rs  director_handoff.rs  shootemup.rs
crates/switchyard-core/src/: authoring.rs  ids.rs  lib.rs  program.rs  runtime.rs  snapshot.rs  trace.rs
crates/switchyard-core/tests/: catalog_document.rs  director_handoff.rs  owned_program.rs  program_builder.rs  serde_program.rs  serde_snapshot.rs  smoke.rs  trace.rs
crates/switchyard-debug/: Cargo.toml
demo-wasm/: Cargo.toml  README.md
demo-wasm/src/: lib.rs
demo-wasm/tests/: showcase.rs
demo-wasm/www/: index.html  main.js  styles.css
docs/: 01-PRD.md  02-TECHNICAL-ARCHITECTURE.md  03-WBS-AND-MILESTONES.md  04-TDD-QUALITY-GATES.md  05-ACCEPTANCE-TEST-MATRIX.md  06-RISK-REGISTER.md  07-REPO-BLUEPRINT.md
scripts/: run_prompt_pack.py  test_run_prompt_pack.py  validate_contract_fixtures.py
(+8 files in other folders)
