[package]
name = "switchyard-demo-wasm"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
description = "WASM showcase for switchyard"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
switchyard-core = { path = "../crates/switchyard-core", features = ["std"] }
switchyard-debug = { path = "../crates/switchyard-debug" }
wasm-bindgen = "0.2"
