[package]
name = "switchyard-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Host-side catalog and snapshot inspection CLI for switchyard"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
switchyard-core = { path = "../switchyard-core", features = ["serde", "std"] }

