[package]
name = "switchyard-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Deterministic no_std structured-concurrency runtime walking skeleton"

[features]
default = []
alloc = []
serde = ["dep:serde", "alloc"]
std = ["alloc"]

[dependencies]
serde = { version = "1", default-features = false, features = ["alloc", "derive"], optional = true }

[dev-dependencies]
serde_json = "1"

[lib]
name = "switchyard_core"
path = "src/lib.rs"
